--- a/frontend/naydzhl/training/slavik.html
+++ b/frontend/naydzhl/training/slavik.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="glist.css">
+    <link rel="stylesheet" href="\..\..\..\samost\css\test.css">
 </head>
 <body>
     <p class="redButton">афыаыфвф</p>
