Садам хусейн вернулся!

--- a/frontend/naydzhl/training/sex.html
+++ b/frontend/naydzhl/training/sex.html
@@ -16,7 +16,7 @@
     </script>
   <div class="card" style="width: 18rem;">
     <img
-      src="https://media.discordapp.net/attachments/1004520363486617671/1269443120026882058/34650235c6edae34b21703e03c802a68.jpg?ex=66b0bd48&is=66af6bc8&hm=4d133c43ab8bb9778a369188d54b83ff45c163cd51a247783de933450ba15242&format=webp&width=511&height=512&"
+      src="images\34650235c6edae34b21703e03c802a68.webp"
       class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
@@ -27,7 +27,7 @@
   </div>
   <div class="card" style="width: 18rem;">
     <img
-      src="https://media.discordapp.net/attachments/1004520363486617671/1269443120026882058/34650235c6edae34b21703e03c802a68.jpg?ex=66b0bd48&is=66af6bc8&hm=4d133c43ab8bb9778a369188d54b83ff45c163cd51a247783de933450ba15242&format=webp&width=511&height=512&"
+      src="\..\..\..\frontend\naydzhl\training\images\34650235c6edae34b21703e03c802a68.webp"
       class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
