--- a/frontend/rendy/RegistrationWindow.html
+++ b/frontend/rendy/RegistrationWindow.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="wrapper">
+        <forum action="">
+            <h1>
+                Zaloguj się
+            </h1>
+            <div class="input-box">
+                <input type="text" placeholder="Nazwa" required>
+            </div>
+            <div class="input-box">
+                <input type="password" placeholder="Twoia mama" required>
+            </div>
+            <div class="ramamber-forgot">
+                
+            </div>
+        </forum>
+
 </body>
+
 </html>
