Registration window for website users

--- a/frontend/rendy/RegistrationWindow.html
+++ b/frontend/rendy/RegistrationWindow.html
@@ -18,10 +18,10 @@
                 <input type="text" placeholder="Nazwa" required>
             </div>
             <div class="input-box">
-                <input type="password" placeholder="Twoia mama" required>
+                <input type="password" placeholder="Twoia mama shluha" required>
             </div>
             <div class="ramamber-forgot">
-                
+
             </div>
         </forum>
 
