Registration window for website users

--- a/frontend/rendy/RegistrationWindow.html
+++ b/frontend/rendy/RegistrationWindow.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
     <div class="wrapper">
-        <forum action="">
+        <form action="">
             <h1>
                 Zaloguj się
             </h1>
             <div class="input-box">
                 <input type="text" placeholder="Nazwa" required>
+                <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
                 <input type="password" placeholder="Twoia mama shluha" required>
+                <i class='bx bxs-lock-alt'></i>
             </div>
             <div class="ramamber-forgot">
-
+                <label><input type="checkbox">Zapamiętaj mnie</label>
+                <a href="#">Zapomniałeś hasła</a>
             </div>
+            <button type="sumbit" class="btn">Zaloguj się</button>
+            <div class="register-link"></div>
+            <p>У вас нет учетной записи?<a href="#">Register</a></p>
         </forum>
 
 </body>
