Registration window for website users

--- a/frontend/rendy/RegistrationWindow.html
+++ b/frontend/rendy/RegistrationWindow.html
@@ -30,7 +30,7 @@
             <button type="sumbit" class="btn">Zaloguj się</button>
             <div class="register-link"></div>
             <p>У вас нет учетной записи?<a href="#">Register</a></p>
-        </forum>
+        </form>
 
 </body>
 
