--- a/frontend/rendy/RegistrationWindow.html
+++ b/frontend/rendy/RegistrationWindow.html
@@ -16,7 +16,7 @@
                 Zaloguj się
             </h1>
             <div class="input-box">
-                <input type="text" placeholder="Nazwa" required>
+                <input type="text" name ="loginLabel" id = "loginLabelId" placeholder="Nazwa" required>
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
