--- a/frontend/rendy/RegistrationWindow.html
+++ b/frontend/rendy/RegistrationWindow.html
@@ -20,7 +20,7 @@
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-                <input type="password" placeholder="Twoia mama shluha" required>
+                <input type="password" name = "passwordLabel" placeholder="Twoia mama shluha" required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
             <div class="ramamber-forgot">
