--- a/frontend/rendy/RegistrationWindow.html
+++ b/frontend/rendy/RegistrationWindow.html
@@ -13,23 +13,23 @@
     <div class="wrapper">
         <form action="">
             <h1>
-                Zaloguj się
+                Авторизация
             </h1>
             <div class="input-box">
-                <input type="text" placeholder="Nazwa" required>
+                <input type="text" placeholder="Имя Логин" required>
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-                <input type="password" name = "passwordLabel" placeholder="Twoia mama shluha" required>
+                <input type="password" name = "passwordLabel" placeholder="Пароль" required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
             <div class="ramamber-forgot">
-                <label><input type="checkbox">Zapamiętaj mnie</label>
-                <a href="#">Zapomniałeś hasła</a>
+                <label><input type="checkbox">Запомни меня</label>
+                <a href="#">Забыл пароль</a>
             </div>
-            <button type="sumbit" class="btn">Zaloguj się</button>
+            <button type="sumbit" class="btn">Авторизироваться</button>
             <div class="register-link"></div>
-            <p>У вас нет учетной записи?<a href="#">Register</a></p>
+            <p>У вас нет учетной записи?<a href="#">Регистрация</a></p>
         </form>
 
 </body>
