--- a/frontend/rendy/RegistrationWindow.html
+++ b/frontend/rendy/RegistrationWindow.html
@@ -16,7 +16,7 @@
                 Авторизация
             </h1>
             <div class="input-box">
-                <input type="text" placeholder="Имя Логин" required>
+                <input type="text" placeholder="Логин" required>
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
