--- a/frontend/rendy/RegistrationWindow.html
+++ b/frontend/rendy/RegistrationWindow.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="wrapper">
-        <form action="">
+        <form method="POST" action="/register">
             <h1>
                 Zaloguj się
             </h1>
